--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uncle Pizza Steve - YouTube</title>
+  <title>unclepizzasteve - YouTube</title>
   <style>
     /* Reset */
     * {
@@ -66,11 +66,11 @@
   </style>
 </head>
 <body>
-  <h1>Uncle Pizza Steve</h1>
+  <h1>unclepizzasteve</h1>
   <p>Welcome to my official YouTube channel page!</p>
   <a href="https://www.youtube.com/channel/UCog3s567IpCMt5oeLiBv8_Q" class="button" target="_blank">
     Visit My Channel
   </a>
-  <footer>© 2025 Uncle Pizza Steve</footer>
+  <footer>© 2025 unclepizzasteve</footer>
 </body>
 </html>
